# pyconfplate

./: README.md  pyproject.toml  vibe-code-rule.yaml
.ai/: AI-PRINCIPLE-GUIDE.md  AI-PYTHON-GUIDE.md
program/app/: main.py
program/processor/: base_executor.py
