[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = ""
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "pydantic==2.12.5",
  "PyYAML==6.0.3",
  "setuptools==80.10.2",
  "pytest==9.0.2",
]

[tool.setuptools.packages.find]
where = ["program"]